--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -26,10 +26,12 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Augustos Interviews:</span>
-                        <a data-lang-key="bio-ajm-iview-1" href="./interviews/intrvw_ajm01.html">ab heute hier ist das euer Arbeitsplatz</a>
-                        - <a data-lang-key="bio-ajm-iview-2" href="./interviews/intrvw_ajm02.html">das ist moderne Sklaverei</a> -
-                        <a data-lang-key="bio-ajm-iview-3" href="./interviews/intrvw_ajm03.html">ich dachte ihr seit schon weg</a> -
-                        <a data-lang-key="bio-ajm-iview-4" href="./interviews/intrvw_ajm04.html">es war wirklich so</a>
+                        <a data-lang-key="ajm01-audio-title" href="./interviews/intrvw_ajm01.html"
+                            >ab heute hier ist das euer Arbeitsplatz</a
+                        >
+                        - <a data-lang-key="ajm02-audio-title" href="./interviews/intrvw_ajm02.html">das ist moderne Sklaverei</a> -
+                        <a data-lang-key="ajm03-audio-title" href="./interviews/intrvw_ajm03.html">ich dachte ihr seit schon weg</a> -
+                        <a data-lang-key="ajm04-audio-title" href="./interviews/intrvw_ajm04.html">es war wirklich so</a>
                     </div>
                 </div>
 
@@ -61,7 +63,7 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-red-800">Bichs Interviews:</span>
-                        <a data-lang-key="bio-bl-iview-1" href="./interviews/intrvw_b_l01.html">du bist ganz anders gesehen</a>
+                        <a data-lang-key="b_l01-audio-title" href="./interviews/intrvw_b_l01.html">du bist ganz anders gesehen</a>
                     </div>
                 </div>
             </div>
@@ -81,9 +83,9 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Davids Interviews:</span>
-                        <a data-lang-key="bio-dm-iview-1" href="./interviews/intrvw_dm01.html">wie ein Theater beobachtet</a> -
-                        <a data-lang-key="bio-dm-iview-2" href="./interviews/intrvw_dm02.html">Besuch bekommen</a> -
-                        <a data-lang-key="bio-dm-iview-3" href="./interviews/intrvw_dm04.html">ich war ein richtiger Sklave</a>
+                        <a data-lang-key="dm01-audio-title" href="./interviews/intrvw_dm01.html">wie ein Theater beobachtet</a> -
+                        <a data-lang-key="dm02-audio-title" href="./interviews/intrvw_dm02.html">Besuch bekommen</a> -
+                        <a data-lang-key="dm04-audio-title" href="./interviews/intrvw_dm04.html">ich war ein richtiger Sklave</a>
                     </div>
                 </div>
 
@@ -115,13 +117,13 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Dorina & Andreas' Interviews:</span>
-                        <a data-lang-key="bio-ad-iview-1" href="./interviews/intrvw_a_d01.html">ein freundschaftliches Verhältnis</a> -
-                        <a data-lang-key="bio-ad-iview-2" href="./interviews/intrvw_a_d02.html">wir wollten das ja letzten Endes</a> -
-                        <a data-lang-key="bio-ad-iview-3" href="./interviews/intrvw_a_d03.html">meine Arbeit nehmen die mir jetzt weg</a> -
-                        <a data-lang-key="bio-ad-iview-4" href="./interviews/intrvw_a_d04.html">die ganze Struktur zerbrach</a> -
-                        <a data-lang-key="bio-ad-iview-5" href="./interviews/intrvw_a_d05.html">das nahm ja so Überhand</a> -
-                        <a data-lang-key="bio-ad-iview-6" href="./interviews/intrvw_a_d08.html">die waren so in ihrem Rausch</a> -
-                        <a data-lang-key="bio-ad-iview-7" href="./interviews/intrvw_a_d06.html">das wollten wir doch nicht</a>
+                        <a data-lang-key="a_d01-audio-title" href="./interviews/intrvw_a_d01.html">ein freundschaftliches Verhältnis</a> -
+                        <a data-lang-key="a_d02-audio-title" href="./interviews/intrvw_a_d02.html">wir wollten das ja letzten Endes</a> -
+                        <a data-lang-key="a_d03-audio-title" href="./interviews/intrvw_a_d03.html">meine Arbeit nehmen die mir jetzt weg</a>
+                        - <a data-lang-key="a_d04-audio-title" href="./interviews/intrvw_a_d04.html">die ganze Struktur zerbrach</a> -
+                        <a data-lang-key="a_d05-audio-title" href="./interviews/intrvw_a_d05.html">das nahm ja so Überhand</a> -
+                        <a data-lang-key="a_d08-audio-title" href="./interviews/intrvw_a_d08.html">die waren so in ihrem Rausch</a> -
+                        <a data-lang-key="a_d06-audio-title" href="./interviews/intrvw_a_d06.html">das wollten wir doch nicht</a>
                     </div>
                 </div>
             </div>
@@ -138,7 +140,7 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Hoais Interviews:</span>
-                        <a data-lang-key="bio-dhn-iview-1" href="./interviews/intrvw_dhn01.html">ich liebe Deutschland</a>
+                        <a data-lang-key="dhn01-audio-title" href="./interviews/intrvw_dhn01.html">ich liebe Deutschland</a>
                     </div>
                 </div>
 
@@ -171,11 +173,11 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Ibraimos Interviews:</span>
-                        <a data-lang-key="bio-ia-iview-1" href="./interviews/intrvw_ia01.html"
+                        <a data-lang-key="ia01-audio-title" href="./interviews/intrvw_ia01.html"
                             >die Gesellschaft war nicht so interessiert</a
                         >
                         -
-                        <a data-lang-key="bio-ia-iview-2" href="./interviews/intrvw_ia02.html">was guckst du</a>
+                        <a data-lang-key="ia02-audio-title" href="./interviews/intrvw_ia02.html">was guckst du</a>
                     </div>
                 </div>
             </div>
@@ -192,9 +194,9 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black"> Jan und René Interviews:</span>
-                        <a data-lang-key="bio-jr-iview-1" href="./interviews/intrvw_jr01.html">das ist im Osten Politik gewesen</a> -
-                        <a data-lang-key="bio-jr-iview-2" href="./interviews/intrvw_jr02.html">es gab keine Grenze</a> -
-                        <a data-lang-key="bio-jr-iview-3" href="./interviews/intrvw_jr03.html">Hoyerswerda hat den Anfang gemacht</a>
+                        <a data-lang-key="jr01-audio-title" href="./interviews/intrvw_jr01.html">das ist im Osten Politik gewesen</a> -
+                        <a data-lang-key="jr02-audio-title" href="./interviews/intrvw_jr02.html">es gab keine Grenze</a> -
+                        <a data-lang-key="jr03-audio-title" href="./interviews/intrvw_jr03.html">Hoyerswerda hat den Anfang gemacht</a>
                     </div>
                 </div>
 
@@ -226,7 +228,7 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Kordulas Interview:</span>
-                        <a data-lang-key="bio-ks-iview-1" href="./interviews/intrvw_ks01.html">für mich war das ein Unfall</a>
+                        <a data-lang-key="ks01-audio-title" href="./interviews/intrvw_ks01.html">für mich war das ein Unfall</a>
                     </div>
                 </div>
             </div>
@@ -244,7 +246,7 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Lams Interview:</span>
-                        <a data-lang-key="bio-lg-iview-1" href="./interviews/intrvw_b_l02.html">Heimat hin oder her</a>
+                        <a data-lang-key="b_l02-audio-title" href="./interviews/intrvw_b_l02.html">Heimat hin oder her</a>
                     </div>
                 </div>
 
@@ -277,7 +279,7 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Lan & Lois Interviews:</span>
-                        <a data-lang-key="bio-ls-iview-1" href="./interviews/intrvw_ls01.html">das ist normal</a>
+                        <a data-lang-key="ls01-audio-title" href="./interviews/intrvw_ls01.html">das ist normal</a>
                     </div>
                 </div>
             </div>
@@ -297,10 +299,11 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black"> Moises Interviews:</span>
-                        <a data-lang-key="bio-mm-iview-1" href="./interviews/intrvw_mm01.html">der Rassismus wurde noch stärker</a> -
-                        <a data-lang-key="bio-mm-iview-2" href="./interviews/intrvw_mm02.html">in diesem Land muss ich sterben</a> -
-                        <a data-lang-key="bio-mm-iview-3" href="./interviews/intrvw_mm03.html">heute habe ich dieses Trauma nicht mehr</a> -
-                        <a data-lang-key="bio-mm-iview-4" href="./interviews/intrvw_mm04.html">die kannten keine Schwarzen</a>
+                        <a data-lang-key="mm01-audio-title" href="./interviews/intrvw_mm01.html">der Rassismus wurde noch stärker</a> -
+                        <a data-lang-key="mm02-audio-title" href="./interviews/intrvw_mm02.html">in diesem Land muss ich sterben</a> -
+                        <a data-lang-key="mm03-audio-title" href="./interviews/intrvw_mm03.html">heute habe ich dieses Trauma nicht mehr</a>
+                        -
+                        <a data-lang-key="mm04-audio-title" href="./interviews/intrvw_mm04.html">die kannten keine Schwarzen</a>
                     </div>
                 </div>
 
@@ -340,9 +343,9 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black"> Silke und Dennis Interviews:</span>
-                        <a data-lang-key="bio-ot-iview-1" href="./interviews/intrvw_ot01.html">es war nicht böse gemeint</a> -
-                        <a data-lang-key="bio-ot-iview-2" href="./interviews/intrvw_ot02.html">dieser Begriff „Vertragsarbeiter“</a> -
-                        <a data-lang-key="bio-ot-iview-3" href="./interviews/intrvw_ot03.html">wir waren immer sicher</a>
+                        <a data-lang-key="ot01-audio-title" href="./interviews/intrvw_ot01.html">es war nicht böse gemeint</a> -
+                        <a data-lang-key="ot02-audio-title" href="./interviews/intrvw_ot02.html">dieser Begriff „Vertragsarbeiter“</a> -
+                        <a data-lang-key="ot03-audio-title" href="./interviews/intrvw_ot03.html">wir waren immer sicher</a>
                     </div>
                 </div>
 
